--- a/src/Assets/Css/Colors.css
+++ b/src/Assets/Css/Colors.css
@@ -11,4 +11,10 @@
   --text--black: #000100;
 
   --green--text: #92aaa3;
+
+  --html--logo: #e34c26;
+  --css--logo: #2965f1;
+  --js--logo: #f0db4f;
+  --react--logo: #61DBFB;
+  --git--logo: #F1502F;
 }
