Create LoginPage and Header Modified

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,10 @@
 @import "./Assets/Css/Reset.css";
 @import "./Assets/Css/Colors.css";
 @import "./Assets/Css/Logo.css";
+@import "./Assets/Css/LoginAnimation.css";
 @import "./Assets/Css/Header.css";
 @import "./Assets/Css/Homepage.css";
+@import "./Assets/Css/LoginPage.css";
 
 /* *Oswald Font Import */
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap');
@@ -22,4 +24,7 @@ body{
 .app{
   width: 100%;
   min-height: 100vh;
+}
+.container{
+  width: 1170px;
 }
