Fix Header Design Problems

--- a/src/Assets/css/Header.css
+++ b/src/Assets/css/Header.css
@@ -1,25 +1,33 @@
-.header-container{
+.header-container {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 48px;
 }
-.header-container header{
+.header-container header {
   width: 1256px;
-  padding: 24px 64px;
+  padding: 16px 64px;
   border: 4px solid var(--blue);
   border-radius: 48px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.header-container nav a{
+.header-container header nav a {
   font-size: 16px;
   margin-right: 32px;
 }
-.header-container header nav a:last-child{
+.header-container header nav a:last-child {
   margin-right: 0;
 }
-.header-container nav a i{
+.header-container header nav a i {
   margin-left: 8px;
+}
+.header-container header nav a:nth-child(2) i {
+  font-size: 12px;
+}
+.header-container header .login-btn,
+.header-container header .login-btn i {
+  color: var(--blue);
 }
