--- a/src/Assets/css/Header.css
+++ b/src/Assets/css/Header.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 48px;
+  padding: 48px 0;
 }
 .header-container header {
   width: 1256px;
