--- a/src/Assets/css/Header.css
+++ b/src/Assets/css/Header.css
@@ -14,12 +14,16 @@
   align-items: center;
   justify-content: space-between;
 }
+.header-container header nav{
+  display: flex;
+}
 .header-container header nav a {
   font-size: 16px;
   margin-right: 32px;
 }
-.header-container header nav a:last-child {
+.header-container header nav > a:last-child {
   margin-right: 0;
+  margin-left: 32px;
 }
 .header-container header nav a i {
   margin-left: 8px;
@@ -31,3 +35,4 @@
 .header-container header .login-btn i {
   color: var(--blue);
 }
+
