--- a/src/Assets/css/NotFoundPage.css
+++ b/src/Assets/css/NotFoundPage.css
@@ -6,16 +6,23 @@
   justify-content: center;
 }
 .notfound-page-container .content{
+  width: 1256px;
+  height: 80vh;
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+.notfound-page-container .content .left-side,
+.notfound-page-container .content .right-side{
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
-.notfound-page-container .content h1{
+.notfound-page-container .content .left-side h1{
   margin: 32px 0;
   font-size: 64px;
 }
-.notfound-page-container .content .btn{
+.notfound-page-container .content .left-side .btn{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,4 +31,7 @@
   border-radius: 24px;
   background-color: var(--blue);
   margin-top: 32px;
+}
+.notfound-page-container .content .right-side img{
+  width: 512px;
 }
